# boardgame

./: Dockerfile  docker-compose.local.yml  pyproject.toml
.github/workflows/: checks.yml  dev_deploy.yml
apps/games/: models.py  urls.py
apps/games/migrations/: 0001_initial.py
apps/games/serializers/: gameserializer.py
apps/games/views/: games.py
apps/users/: models.py
apps/users/migrations/: 0001_initial.py
config/: urls.py
config/settings/: base.py  dev.py
resources/nginx/: Dockerfile.dev  nginx.dev.conf  nginx.local.conf
resources/scripts/: test.sh
